examples/test/testpolicy10425.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10425
  namespace: namespace384
spec:
  podSelector:
    matchLabels:
      key16: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value14
      podSelector:
        matchLabels:
          key25: value16
          key23: value23
